crates/oxc_css_parser/tests/error/scss/at-rule/else/else-only.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: Sass `@else` at-rule is disallowed here
  ┌─ else-only.scss:1:1
  │
1 │ @else {}
  │ ^^^^^


